Corrected AddDialog - teachersNoItems + text-align left

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -44,6 +44,10 @@ a {
   margin-bottom: 10px;
 }
 
+.el-dialog {
+  text-align: left;
+}
+
 .el-form--label-top {
   .el-form-item__label {
     line-height: normal;
